--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ urls:
 
 # Edit Author details (For multi authors check _data/authors.yml)
 
-author_logo: pic.jpg
+author_logo: girl.jpg
 author: Deva Siva
 author_bio: Hi, my name is Deva. I built this site using devlopr-jekyll :D
 author_email: "mail@sujaykundu.com"
