--- a/_config.yml
+++ b/_config.yml
@@ -9,15 +9,9 @@ baseurl: "" # the subpath of your site, e.g. /blog
 # Navigation
 urls:
     - text: Home
-      url: /
+      url: /Home
     - text: About
       url: /about
-    - text: Blog
-      url: /blog
-    - text: Gallery
-      url: /gallery
-    - text: Shop
-      url : /shop
     - text: Contact
       url : /contact
 
