--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ urls:
 # Edit Author details (For multi authors check _data/authors.yml)
 
 author_logo: girl.png
-author: Deva Siva
+author: Devadharshni Sivakumar
 author_bio: Hi, my name is Deva. I built this site using devlopr-jekyll :D
 author_email: "mail@sujaykundu.com"
 author_location: India
