--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ urls:
 
 author_logo: girl.png
 author: Devadharshni Sivakumar
-author_bio: Hi, my name is Deva. I built this site using devlopr-jekyll :D
+author_bio: UG grad | Web developer | Excelled in Python Programming ,MySQL Databases , Front-end technologies , BEGINNER DSA | Passionate about Full stack developement & Software engineering.
 author_email: "mail@sujaykundu.com"
 author_location: India
 author_website_url: "https://sujaykundu.com"
