--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author_bio: UG grad | Web developer | Excelled in Python Programming ,MySQL Data
 author_email: "mail@sujaykundu.com"
 author_location: India
 author_website_url: "https://sujaykundu.com"
-typewrite-text: devlopr is a jekyll framework built for developers. You can edit this in _config.yml file
+typewrite-text: UG grad | Web developer | Excelled in Python Programming ,MySQL Databases , Front-end technologies , BEGINNER DSA | Passionate about Full stack developement & Software engineering.
 hero_cover_img: sample_cover.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
 # Experiences
