--- a/_config.yml
+++ b/_config.yml
@@ -29,18 +29,12 @@ hero_cover_img: sample_cover.jpg # replace this for changing homepage cover (eg.
 
 # Experiences
 author_work_experiences:
-            - company_name: Google
+            - company_name: Code Alpha Technologies  
               company_logo: google.png
-              company_url: https://google.com
-              designation: Software Engineer
-              description: Worked on various Google Products
+              designation: Web Developer Intern
+              description: Worked on Projects using Front-End Technologies
               visibility: true
-            - company_name: Microsoft
-              company_logo: microsoft.png
-              company_url: https://microsoft.com
-              designation: Azure Developer
-              description: Worked on various Azure Cloud Products
-              visibility: true
+          
 
 # Education
 author_education_details:
