--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ hero_cover_img: sample_cover.jpg # replace this for changing homepage cover (eg.
 # Experiences
 author_work_experiences:
             - company_name: Code Alpha Technologies  
-              company_logo: google.png
+              company_logo: code alpha.jpeg
               designation: Web Developer Intern
               description: Worked on Projects using Front-End Technologies
               visibility: true
