--- a/_config.yml
+++ b/_config.yml
@@ -38,11 +38,11 @@ author_work_experiences:
 
 # Education
 author_education_details:
-              - college_logo: mit.png
-                college_name: MIT
+              - college_logo: bharathidasan-university-logo-india.jpg
+                college_name: Bharathidasan University
                 college_url: https://mit.org
-                college_degree: CS Engineer
-                description: Bachelor of Technology
+                college_degree: Bachelor of Technology
+                description: Computer Science and Technology
                 visibility: true
 
 # Projects
