--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ author_work_experiences:
 author_education_details:
               - college_logo: bharathidasan-university-logo-india.jpg
                 college_name: Bharathidasan University
-                college_url: https://mit.org
+                college_url: https://www.bdu.ac.in/
                 college_degree: Bachelor of Technology
                 description: Computer Science and Technology
                 visibility: true
